common-resources/samplez-ns-python/python-application-02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplez
  labels:
    app: app
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0    
  template:
    metadata:
      labels:
        app: app
    spec:  
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - app
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100  
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: app
        image: sharedregistry23193.azurecr.io/python-application-02:gcp
        imagePullPolicy: Always     
        ports:
          - name: http-port
            protocol: TCP
            containerPort: 8080
        resources: {}   
      terminationGracePeriodSeconds: 60              


# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: samplez
#   namespace: samplez
# spec:
#   template:
#     spec:
#       containers:
#       - name: app
#         image: sharedregistry23.azurecr.io/application-01:dev
