common-resources/samplez-ns-python/python-application-02/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: samplez
spec:
  http:
  - match:
    - uri:
        prefix: /python-application-02
    route:
    - destination:
        host: python-application-02.samplez-ns-python.svc.cluster.local
        port:
          number: 8080
